# depdf

./: .gitignore  Pipfile  README.md  pyproject.toml  setup.py
depdf/: __init__.py  api.py  base.py  config.py  error.py  log.py  page.py  page_tools.py  paragraph.py  pdf.py  pdf_tools.py  settings.py  table.py  utils.py
depdf/components/: __init__.py  image.py  paragraph.py  span.py  table.py  text.py
docs/: conf.py  depdf.components.rst  depdf.rst  index.rst  modules.rst  requirements.txt
test/: test.html  test.py
