[tool.poetry]
name = "depdf"
version = "0.2.2"
description = "PDF table & paragraph extractor"
authors = ["Meltonization <mengzy1989@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
homepage = "https://github.com/meldonization"
repository = "https://github.com/meldonization/depdf"
keywords = [
    "pdf",
    "pdf-parsing",
    "pdf-to-html",
    "table-extraction",
    "paragraph-extraction"
]
classifiers = [
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.6"
pdfplumber = "0.5.16"
beautifulsoup4 = "4.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
